--- a/resources/localization/fi/PrusaSlicer_fi.po
+++ b/resources/localization/fi/PrusaSlicer_fi.po
@@ -5,7 +5,7 @@ msgstr ""
 "POT-Creation-Date: 2023-12-11 08:57+0100\n"
 "PO-Revision-Date: 2024-01-25 18:38+0200\n"
 "Last-Translator: J3r0github\n"
-Language-Team: PrusaSlicer developers\n"
+"Language-Team: PrusaSlicer developers\n"
 "Language-Team: \n"
 "Language: fi_FI\n"
 "MIME-Version: 1.0\n"
